# neko_no_te

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md  copilot-instructions.md.new
crates/app-config/: Cargo.toml  README.md
crates/app-config/src/: lib.rs
crates/chat-core/: Cargo.toml
crates/chat-core/examples/: check_model_match.rs  prompt_registry_check.rs
crates/chat-core/src/: chat_controller.rs  console_log.rs  conversation_service.rs  lib.rs  mcp_client.rs  mcp_manager.rs  message_handler.rs  prompt_builders.rs
crates/chat-core/src/langchain_tools/: mcp.rs
crates/chat-core/src/plugins/: discovery.rs  enabled.rs  guard.rs  metadata.rs  mod.rs  prompt_builder.rs  validation.rs
crates/chat-core/tests/: chat_core_tests.rs
crates/chat-engine/: Cargo.toml  README.md
crates/chat-engine/src/: error.rs  lib.rs  session.rs
crates/chat-history/: Cargo.toml  README.md
crates/chat-history/src/: conversation.rs  lib.rs  manager.rs  message.rs
crates/langchain-bridge/: Cargo.toml  README.md
crates/langchain-bridge/src/: lib.rs
crates/model-adapter/: Cargo.toml  README.md
crates/model-adapter/src/: lib.rs
crates/model-provider/: Cargo.toml  README.md
crates/model-provider/src/: error.rs  lib.rs
crates/neko-ui/: Cargo.toml  README.md
crates/neko-ui/src/: chat_bubble.rs  chat_input.rs  chat_input_panel.rs  chat_main_panel.rs  chat_message_list.rs  chat_messages_panel.rs  chat_sidebar.rs  chat_toolbar.rs  chat_workspace.rs  lib.rs  mcp_status_panel.rs  model_selector.rs  model_selector_row.rs  scratchpad_console.rs  text_input.rs
crates/ollama-client/: Cargo.toml  README.md
crates/ollama-client/examples/: simple.rs
crates/ollama-client/src/: lib.rs
crates/plugins/adapter-template/: Cargo.toml  README.md  plugin.toml
crates/plugins/adapter-template/src/: lib.rs
crates/plugins/gemma3-adapter/: Cargo.toml  plugin.toml
crates/plugins/gemma3-adapter/src/: lib.rs
crates/plugins/llama3-adapter/: Cargo.toml  plugin.toml
crates/plugins/llama3-adapter/src/: lib.rs
crates/plugins/phi4-mini-adapter/: Cargo.toml  README.md  plugin.toml
crates/plugins/phi4-mini-adapter/src/: lib.rs
crates/plugins/phi4-mini-prompt-builder/: Cargo.toml  README.md  plugin.toml
crates/plugins/phi4-mini-prompt-builder/src/: lib.rs
crates/plugins/qwen3-adapter/: Cargo.toml  plugin.toml
crates/plugins/qwen3-adapter/src/: lib.rs
crates/prompt-spi/: Cargo.toml
crates/prompt-spi/src/: lib.rs
crates/ui-utils/: Cargo.toml  README.md
crates/ui-utils/src/: lib.rs  scroll_utils.rs  text_input.rs  text_style.rs
docs/: README.md  known-issues.md
docs/design/: chat-app-plan.md  extension_host.md  ime-and-multiline-input.md  model-integration.md  phi4-integration.md  plugins.md  prompt-builder-spi.md
docs/development/: chat-view-refactoring-plan.md  coding-guidelines.md  daily-log-2025-12-03.md  daily-log.md  neko-ui-components.md  phase3-lessons-learned.md  phase5-mcp-integration.md  refactor-plan.md  ui-utils-extraction.md
docs/research/: gpui-async-patterns.md  gpui_examples.md  gpui_guidance.md  langchain-rust-evaluation.md
docs/usage/: cli-mode.md  langchain-integration.md
neko-assistant/: Cargo.toml  README.md
neko-assistant/docs/: gpui_usage.md
neko-assistant/src/: config.rs  conversation_service.rs  gui.rs  main.rs  mcp_client.rs  mcp_manager.rs  message_handler.rs  plugins.rs  prompt_builders.rs
neko-assistant/src/gui/: chat.rs  console.rs  gpui.rs  mcp_manager.rs  mod.rs  plugin_list.rs  plugins.rs  settings.rs
neko-assistant/src/gui/chat/: chat_view.rs  chat_view_state.rs  chat_window.rs  console_window.rs  controller_facade.rs  conversation_actions.rs  data_mappers.rs  event_loop.rs  initialization.rs  menu.rs  menu_actions.rs  menu_bar_widget.rs  menu_context.rs  mod.rs  model_selector.rs  scratchpad.rs  scratchpad_window.rs  session_popup.rs  sidebar.rs  toolbar.rs  toolbar_view_model.rs  toolbar_widget.rs  ui_state.rs
neko-assistant/src/langchain_tools/: mcp.rs  mod.rs
neko-assistant/src/plugins/: discovery.rs  enabled.rs  guard.rs  metadata.rs  mod.rs  prompt_builder.rs  validation.rs
plugins/: enabled.json
plugins/gemma3-adapter/: plugin.toml
plugins/llama3-adapter/: plugin.toml
plugins/qwen3-adapter/: plugin.toml
research/cli-test-runner/: Cargo.toml
research/cli-test-runner/src/: main.rs
research/gpui-scroll-example/: Cargo.toml  README.md
research/gpui-scroll-example/src/: main.rs
research/langchain-rust-test/: Cargo.toml  README.md
research/langchain-rust-test/src/: basic_llm.rs  conversational_chain.rs  streaming.rs
research/mcp-weather-server/: Cargo.toml
research/mcp-weather-server/src/: main.rs
research/scroll-verification/: Cargo.toml  README.md
research/scroll-verification/src/: main.rs
scripts/: build_and_sync.ps1  build_cached.ps1  sync-plugins.ps1  sync_plugins_to_repo.ps1  verify-llm.ps1
scripts/cli-tests/: phi4_prompt_builder_tests.json  tmp_empty.json
