[workspace]
members = [
    "neko-assistant",
    "crates/chat-core",
    "crates/model-provider",
    "crates/model-adapter",
    "crates/ollama-client",
    "crates/app-config",
    "crates/chat-engine",
    "crates/chat-history",
    "crates/plugins/adapter-template",
    "crates/plugins/phi4-mini-adapter",
    "crates/plugins/llama3-adapter",
    "crates/plugins/gemma3-adapter",
    "crates/plugins/qwen3-adapter",
    "crates/ui-utils",
    "crates/neko-ui",
    "crates/prompt-spi",
    "research/mcp-weather-server",
]

resolver = "2"

[workspace.package]
authors = ["tyaro"]
edition = "2021"
license = "MIT"

[patch.crates-io]
langchain-rust = { path = "vendor/langchain-rust" }
