[package]
name = "neko-assistant"
version = "0.1.0"
edition = "2021"
authors = ["tyaro"]
description = "neko-assistant helper utilities (plugin management CLI + future GUI integration)"
license = "MIT"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
toml = "0.9.8"
anyhow = "1.0.100"
dirs = "5.0"
gpui = "0.2.2"
gpui-component = { version = "0.5.0-preview2" }
chat-history = { path = "../crates/chat-history" }
app-config = { path = "../crates/app-config" }
ui-utils = { path = "../crates/ui-utils" }
neko-ui = { path = "../crates/neko-ui" }
ollama-client = { path = "../crates/ollama-client" }
prompt-spi = { path = "../crates/prompt-spi" }
chat-core = { path = "../crates/chat-core" }
langchain-bridge = { path = "../crates/langchain-bridge" }



## Removed local zed-fork overrides to prefer crates.io published crates.

[dev-dependencies]
tempfile = "3.13"
