[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.83"
chat-history = { path = "../chat-history" }
langchain-bridge = { path = "../langchain-bridge" }
langchain-rust = { version = "4.6.0", features = ["ollama"] }
libloading = "0.8"
model-provider = { path = "../model-provider", features = ["ollama-impl"] }
ollama-client = { path = "../ollama-client" }
prompt-spi = { path = "../prompt-spi" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
toml = "0.9.8"

[dev-dependencies]
tempfile = "3.13.0"
