[package]
name = "chat-engine"
version = "0.1.0"
edition = "2021"
authors = ["tyaro"]
description = "Chat engine for neko-assistant with LLM integration"
license = "MIT"

[dependencies]
model-provider = { path = "../model-provider" }
model-adapter = { path = "../model-adapter" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
