[package]
name = "langchain-bridge"
version = "0.1.0"
edition = "2021"
authors = ["tyaro"]
description = "LangChain-rust integration bridge for neko-assistant"
license = "MIT"

[dependencies]
langchain-rust = { version = "4.6.0", features = ["ollama"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
anyhow = "1.0.100"
async-trait = "0.1.83"
async-stream = "0.3.6"
futures = "0.3"
serde_json = "1.0"
