[package]
name = "model-adapter"
version = "0.1.0"
edition = "2021"
authors = ["tyaro"]
description = "Adapter abstraction for model-specific invocation formats and a default llama3.1 adapter."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

# depends on model-provider crate in workspace
model-provider = { path = "../model-provider" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
