[package]
name = "ollama-client"
version = "0.1.0"
edition = "2021"
authors = ["tyaro"]
description = "Lightweight Rust client for talking to a local Ollama instance (configurable base URL)."
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
