[package]
name = "prompt-spi"
version = "0.1.0"
edition = "2021"
description = "Shared SPI between neko-assistant host and prompt builder plugins"
authors = ["tyaro"]
license = "MIT"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
