[package]
name = "cli-test-runner"
version = "0.1.0"
edition = "2021"
authors = ["tyaro"]
description = "Standalone test runner for prompt builder verification (research)"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chat-core = { path = "../..//crates/chat-core" }
prompt-spi = { path = "../..//crates/prompt-spi" }
libloading = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
regex = "1"

[profile.dev]
opt-level = 0
