[package]
name = "langchain-rust-test"
version = "0.1.0"
edition = "2021"

# 独立したプロジェクトとして扱う
[workspace]

[[bin]]
name = "basic_llm"
path = "src/basic_llm.rs"

[[bin]]
name = "conversational_chain"
path = "src/conversational_chain.rs"

[[bin]]
name = "streaming"
path = "src/streaming.rs"

[dependencies]
# langchain-rust with Ollama support
langchain-rust = { version = "4.6", features = ["ollama"] }

# Required dependencies
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# For testing
anyhow = "1.0"
